auto width input for new requirement, fix overflow

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -272,6 +272,9 @@ a.category-tag:hover {
 textarea {
   font-family: inherit;
 }
+.auto-width-input input {
+  width: auto !important;
+}
 
 /* Toast Messages (toastr library) */
 #toast-container .toast-success {
